Update Event Catalog from 63d70ee3ad90154cc8c14bd8ee97b00af21fe772

--- a/docs/event-catalog/daily.data.blood_oxygen.created.mdx
+++ b/docs/event-catalog/daily.data.blood_oxygen.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.blood_oxygen.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "8f6b4009-617b-4301-a1c9-6289397b108c"
+    "user_id": "549825a6-0c6c-44fc-80f1-b2f8d0e9e38e"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
