--- a/docs/event-catalog/daily.data.blood_oxygen.updated.mdx
+++ b/docs/event-catalog/daily.data.blood_oxygen.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.blood_oxygen.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "46fd9b5e-57e9-410d-9499-7f0c5b0d950e"
+    "user_id": "37028c77-7184-45d2-97e4-2fccbf3b008f"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
