--- a/docs/event-catalog/daily.data.caffeine.created.mdx
+++ b/docs/event-catalog/daily.data.caffeine.created.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.caffeine.created",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "077534cd-b217-461d-a8ee-df04409bf699"
+    "user_id": "6a551053-2983-47e2-b4f1-5b02453f80bc"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
