--- a/docs/event-catalog/daily.data.caffeine.updated.mdx
+++ b/docs/event-catalog/daily.data.caffeine.updated.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.caffeine.updated",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "8f732b09-07eb-4657-8d52-b2565158ea1f"
+    "user_id": "41dd678b-ee12-4fb4-81f9-ab9a19cb76da"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
