--- a/docs/event-catalog/daily.data.calories_active.created.mdx
+++ b/docs/event-catalog/daily.data.calories_active.created.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.calories_active.created",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "807ef7d7-30b4-4234-9ce6-4851655984bd"
+    "user_id": "3b8e0092-8142-48a6-b198-4820ae8d0380"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
