--- a/docs/event-catalog/daily.data.calories_active.updated.mdx
+++ b/docs/event-catalog/daily.data.calories_active.updated.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.calories_active.updated",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "ae94bc60-f49d-452c-91f7-22ee483c4d98"
+    "user_id": "8bc0522c-360d-4f47-9aa1-fd02f7cd4b06"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
