--- a/docs/event-catalog/daily.data.calories_basal.created.mdx
+++ b/docs/event-catalog/daily.data.calories_basal.created.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.calories_basal.created",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "80e7e0e7-72e4-4520-b979-febc407c77b5"
+    "user_id": "b33c1fcb-f44e-4424-a2d0-1ba2dd53192b"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
