--- a/docs/event-catalog/daily.data.calories_basal.updated.mdx
+++ b/docs/event-catalog/daily.data.calories_basal.updated.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.calories_basal.updated",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "7076469d-641f-4b85-bcc0-bd254ef1781e"
+    "user_id": "015f780f-2c7e-4971-bbfa-87490c080a9f"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
