--- a/docs/event-catalog/daily.data.cholesterol.created.mdx
+++ b/docs/event-catalog/daily.data.cholesterol.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.cholesterol.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "a5819208-6f86-46f4-8046-3a4d6fe00224"
+    "user_id": "7908dd3e-aaa6-4e76-af44-63a7b1191b82"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
