--- a/docs/event-catalog/daily.data.cholesterol.updated.mdx
+++ b/docs/event-catalog/daily.data.cholesterol.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.cholesterol.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "dbe9346f-435d-4716-9877-536c88d021ea"
+    "user_id": "97132096-c82e-446e-87ef-4bef29967ced"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
