--- a/docs/event-catalog/daily.data.distance.created.mdx
+++ b/docs/event-catalog/daily.data.distance.created.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.distance.created",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "f917937e-0dc5-479e-923d-0e199cddb49f"
+    "user_id": "aebc6223-4d66-4fde-9f0b-e3067a0fc562"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
