--- a/docs/event-catalog/daily.data.distance.updated.mdx
+++ b/docs/event-catalog/daily.data.distance.updated.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.distance.updated",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "5fdb1e64-9bef-4557-8792-0dfd871d5603"
+    "user_id": "dc676fa0-5aba-452d-8cb6-f6407e6bdc49"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
