--- a/docs/event-catalog/daily.data.electrocardiogram_voltage.created.mdx
+++ b/docs/event-catalog/daily.data.electrocardiogram_voltage.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.electrocardiogram_voltage.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "1fd4a455-85f3-4e10-92ff-798042016cea"
+    "user_id": "f49b2f2b-e247-42c1-b8ae-c08a1bd7d027"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
