--- a/docs/event-catalog/daily.data.electrocardiogram_voltage.updated.mdx
+++ b/docs/event-catalog/daily.data.electrocardiogram_voltage.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.electrocardiogram_voltage.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "fb6a1ae4-2dd6-4d93-ac96-8220b9251895"
+    "user_id": "02601d59-1308-4bff-85d6-8049825142ed"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
