--- a/docs/event-catalog/daily.data.fat.created.mdx
+++ b/docs/event-catalog/daily.data.fat.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.fat.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "88ce3b65-22b4-410b-8367-0fc6d1248287"
+    "user_id": "5980fa04-e7c4-4038-a98e-edd364c06990"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
