--- a/docs/event-catalog/daily.data.fat.updated.mdx
+++ b/docs/event-catalog/daily.data.fat.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.fat.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "9473c3e6-d091-42f5-af99-8d8d4cc1639e"
+    "user_id": "dcb7e152-fab1-4b1d-a4d0-4f39588e64a9"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
