--- a/docs/event-catalog/daily.data.floors_climbed.created.mdx
+++ b/docs/event-catalog/daily.data.floors_climbed.created.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.floors_climbed.created",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "e75bb0d9-6b38-4d81-a4ed-d82607106bbd"
+    "user_id": "2b234a3e-ca0c-4de4-a715-4a49ebaed5b9"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
