--- a/docs/event-catalog/daily.data.floors_climbed.updated.mdx
+++ b/docs/event-catalog/daily.data.floors_climbed.updated.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.floors_climbed.updated",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "93bf024b-6e82-4c3b-8e6e-77bf59edb1c3"
+    "user_id": "72e214d1-390a-4956-8d08-866acf4f1227"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
