--- a/docs/event-catalog/daily.data.glucose.created.mdx
+++ b/docs/event-catalog/daily.data.glucose.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.glucose.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "a75d74bc-f650-46d9-b57c-09208e69478a"
+    "user_id": "721ac687-8847-4665-a3f8-3ecd9b18c04e"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
