--- a/docs/event-catalog/daily.data.glucose.updated.mdx
+++ b/docs/event-catalog/daily.data.glucose.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.glucose.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "f57bea0c-93fc-4deb-86ba-a6e56535e1a0"
+    "user_id": "4f2d9bee-96dd-4fcf-b200-2e2aabba9421"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
