--- a/docs/event-catalog/daily.data.heartrate.created.mdx
+++ b/docs/event-catalog/daily.data.heartrate.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.heartrate.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "db612177-6141-402e-bb1d-b1bd79ede034"
+    "user_id": "66f2e95d-2bf8-44b7-8c10-0aed6fc300c8"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
