--- a/docs/event-catalog/daily.data.heartrate.updated.mdx
+++ b/docs/event-catalog/daily.data.heartrate.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.heartrate.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "23352111-cad0-49e4-b04a-0a6c11588f8b"
+    "user_id": "58859c4d-5b94-4f90-a50a-f668f110f787"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
