--- a/docs/event-catalog/daily.data.hrv.created.mdx
+++ b/docs/event-catalog/daily.data.hrv.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.hrv.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "0809adb6-923e-41eb-87b1-757ba5149e3b"
+    "user_id": "90b3508e-591b-42b0-9b9c-98c404930145"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
