--- a/docs/event-catalog/daily.data.hrv.updated.mdx
+++ b/docs/event-catalog/daily.data.hrv.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.hrv.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "196b7a96-e765-4832-9ee0-e8f3d193cd99"
+    "user_id": "be373179-148a-4803-a110-857492bdd3ec"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
