--- a/docs/event-catalog/daily.data.hypnogram.created.mdx
+++ b/docs/event-catalog/daily.data.hypnogram.created.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.hypnogram.created",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "0d7f4fcf-e032-4b56-a953-d828f99afc4b"
+    "user_id": "f7fa2153-a15d-4864-be3d-ab05bc9d27da"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
