--- a/docs/event-catalog/daily.data.hypnogram.updated.mdx
+++ b/docs/event-catalog/daily.data.hypnogram.updated.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.hypnogram.updated",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "50177471-569f-4cd7-9183-bb9f79f803e3"
+    "user_id": "c98c7852-19bc-49c2-931d-44f84468637b"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
