--- a/docs/event-catalog/daily.data.ige.created.mdx
+++ b/docs/event-catalog/daily.data.ige.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.ige.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "6a53a2f2-fef8-49bf-aab0-5f1d1705f76e"
+    "user_id": "d6ce2342-abdf-4ad5-96fe-acd0192aa6f5"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
