--- a/docs/event-catalog/daily.data.ige.updated.mdx
+++ b/docs/event-catalog/daily.data.ige.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.ige.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "39436979-d1b9-4763-9a9f-77a44a496432"
+    "user_id": "bea4a7fe-8657-4290-a861-86938c5dc229"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
