--- a/docs/event-catalog/daily.data.igg.created.mdx
+++ b/docs/event-catalog/daily.data.igg.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.igg.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "8027efb8-77c7-44e9-bf35-3198b269cd85"
+    "user_id": "e4b74cb7-63e5-4fc5-8842-cec2b9eaa622"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
