--- a/docs/event-catalog/daily.data.igg.updated.mdx
+++ b/docs/event-catalog/daily.data.igg.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.igg.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "645ab0a7-310a-4191-a9ec-24c4194c893d"
+    "user_id": "be84fbf7-2e76-434e-9257-899408dcc58a"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
