--- a/docs/event-catalog/daily.data.profile.created.mdx
+++ b/docs/event-catalog/daily.data.profile.created.mdx
@@ -51,8 +51,7 @@ The identifier of the app which recorded this summary. This is only applicable t
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.profile.created",
@@ -60,15 +59,15 @@ The identifier of the app which recorded this summary. This is only applicable t
   "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec",
   "client_user_id": "3Zru4O8cBEiwGTsXgUQGaQ==",
   "data": {
-    "id": "578704d3-6527-4b0d-a33e-bc86f348246e",
+    "id": "dbc0d345-7dbb-4872-97c5-2ecf43edf0b0",
     "height": 183,
     "source": {
       "name": "Oura",
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "685a7461-d240-42d6-b6c9-a2e65a4219b6"
+    "user_id": "d740c243-a4b5-436e-af42-18e3044c495a"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
