--- a/docs/event-catalog/daily.data.respiratory_rate.created.mdx
+++ b/docs/event-catalog/daily.data.respiratory_rate.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.respiratory_rate.created",
@@ -113,8 +112,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "e625e765-8fb4-4705-9c62-229b93090209"
+    "user_id": "6477ba35-1258-495d-bc05-66d9532ff299"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
