--- a/docs/event-catalog/daily.data.respiratory_rate.updated.mdx
+++ b/docs/event-catalog/daily.data.respiratory_rate.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.respiratory_rate.updated",
@@ -113,8 +112,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "50e07ac0-ae7b-43b8-830c-b4e632924919"
+    "user_id": "0e4e0b42-15bd-48b7-b36b-e4cb32beb4fb"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
