--- a/docs/event-catalog/daily.data.steps.created.mdx
+++ b/docs/event-catalog/daily.data.steps.created.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.steps.created",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "9cc9abb3-5a7a-43c6-9516-9b13d9921c12"
+    "user_id": "2f2e3067-4c83-42ef-b770-f907d5c6e397"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
