--- a/docs/event-catalog/daily.data.steps.updated.mdx
+++ b/docs/event-catalog/daily.data.steps.updated.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.steps.updated",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "276bb985-70ce-4be4-bf4b-90151c6f0af6"
+    "user_id": "f22d38c2-404d-4bd2-a1db-ca368dfe9a4d"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
