--- a/docs/event-catalog/daily.data.stress_level.created.mdx
+++ b/docs/event-catalog/daily.data.stress_level.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.stress_level.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "02f31298-deab-4c32-8ddd-8a7185ff28ee"
+    "user_id": "e45d5bfb-19d6-4f98-ae02-f2181b4265b9"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
