--- a/docs/event-catalog/daily.data.stress_level.updated.mdx
+++ b/docs/event-catalog/daily.data.stress_level.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.stress_level.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "5545f37e-73ca-46da-b07a-dcfe2fdf46cc"
+    "user_id": "2cb02986-61e6-448f-8fef-db4386d8886e"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
