--- a/docs/event-catalog/daily.data.vo2_max.created.mdx
+++ b/docs/event-catalog/daily.data.vo2_max.created.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.vo2_max.created",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "6e4b2291-cada-4eaf-b146-424028a67ff7"
+    "user_id": "45b1ca47-35b1-44ff-b0b1-52039bb7807f"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
