--- a/docs/event-catalog/daily.data.vo2_max.updated.mdx
+++ b/docs/event-catalog/daily.data.vo2_max.updated.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.vo2_max.updated",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "2f4c7df3-3e99-4e0b-a9a8-dbc02b87aa38"
+    "user_id": "8cf901e0-a545-4a5f-98ac-7610d0ac8e34"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
