--- a/docs/event-catalog/daily.data.water.created.mdx
+++ b/docs/event-catalog/daily.data.water.created.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.water.created",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "5f7cba5c-8957-4626-8d2d-f30b88bbc9e7"
+    "user_id": "5e0da96b-8c26-44e3-98ba-25753dcbb748"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
