--- a/docs/event-catalog/daily.data.water.updated.mdx
+++ b/docs/event-catalog/daily.data.water.updated.mdx
@@ -90,8 +90,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.water.updated",
@@ -119,8 +118,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "d0843f4e-fea2-4e2c-9654-a409c8a84922"
+    "user_id": "2d8909bd-d83f-44a4-bd0a-c3f171b092c5"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
