--- a/docs/event-catalog/daily.data.weight.created.mdx
+++ b/docs/event-catalog/daily.data.weight.created.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.weight.created",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "34ce3303-c449-4892-9f38-d61b02106173"
+    "user_id": "7c0698b5-f424-4185-970f-9a141b97a5d4"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
