--- a/docs/event-catalog/daily.data.weight.updated.mdx
+++ b/docs/event-catalog/daily.data.weight.updated.mdx
@@ -84,8 +84,7 @@ URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.weight.updated",
@@ -112,8 +111,8 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "24af965c-8009-4824-a706-2804ce089829"
+    "user_id": "504b1f00-8671-477e-ab68-6ef8988e9515"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
