--- a/docs/event-catalog/daily.data.workout_stream.unavailable.mdx
+++ b/docs/event-catalog/daily.data.workout_stream.unavailable.mdx
@@ -67,8 +67,7 @@ Slug for designated sport
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.workout_stream.unavailable",
@@ -76,8 +75,8 @@ Slug for designated sport
   "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec",
   "client_user_id": "3Zru4O8cBEiwGTsXgUQGaQ==",
   "data": {
-    "user_id": "a685241a-0b77-405b-9c5b-85dfb6748f72",
-    "workout_id": "7bef7d65-40c1-4cd3-b521-a9b3809189c3",
+    "user_id": "3cff09ef-00fa-4f8e-a74e-03c86511268e",
+    "workout_id": "34abd97e-28cd-4aca-9b6d-de5374d736dd",
     "message": "The stream for this workout is not available.",
     "provider": {
       "name": "Oura",
@@ -92,4 +91,4 @@ Slug for designated sport
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
