--- a/docs/event-catalog/daily.data.workout_stream.updated.mdx
+++ b/docs/event-catalog/daily.data.workout_stream.updated.mdx
@@ -67,8 +67,7 @@ Slug for designated sport
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "daily.data.workout_stream.updated",
@@ -76,7 +75,7 @@ Slug for designated sport
   "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec",
   "client_user_id": "3Zru4O8cBEiwGTsXgUQGaQ==",
   "data": {
-    "workout_id": "0fc66935-0b9e-43e9-be0c-c911a76ca84f",
+    "workout_id": "ec03ef7f-a821-4c18-aa1b-9c1a809972e8",
     "provider_id": "123dashd9",
     "message": "Due to payload size limits, to access the workout stream, please use the /v2/timeseries/workouts/{workout_id}/stream endpoint.",
     "source": {
@@ -92,4 +91,4 @@ Slug for designated sport
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
