--- a/docs/event-catalog/provider.connection.error.mdx
+++ b/docs/event-catalog/provider.connection.error.mdx
@@ -24,8 +24,7 @@ Constant: `provider.connection.error`
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "provider.connection.error",
@@ -34,10 +33,10 @@ Constant: `provider.connection.error`
   "client_user_id": "3Zru4O8cBEiwGTsXgUQGaQ==",
   "data": {
     "provider": "oura",
-    "user_id": "0d4746a5-cb84-4fd2-ae9f-26d248b6553f",
+    "user_id": "79e6a9b6-6b10-4603-83fc-23fec40dc0f6",
     "message": "We are having issues fetching information for user.                             We won't try to fetch again from this specific provider. Please reconnect device.",
     "error_details": "Failed to pull provider data"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
