--- a/docs/event-catalog/labtest.result.critical.mdx
+++ b/docs/event-catalog/labtest.result.critical.mdx
@@ -39,8 +39,7 @@ When the result was last fetched from a laboratory.
 </ResponseField>
 </Expandable>
 </ResponseField>
-# Examples
-<CodeGroup>
+<ResponseExample>
 ```json Example
 {
   "event_type": "labtest.result.critical",
@@ -48,15 +47,15 @@ When the result was last fetched from a laboratory.
   "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec",
   "client_user_id": "3Zru4O8cBEiwGTsXgUQGaQ==",
   "data": {
-    "order_id": "ca6b65c7-b3bb-429c-9cc8-d22648c1cc70",
+    "order_id": "e2e9f41e-9102-4f19-b332-5303354c7fcf",
     "sample_id": "123456789",
     "status": "final",
     "interpretation": "normal",
-    "team_id": "ce63f3ab-5df6-4929-a8e5-708951415b7e",
-    "user_id": "a2ac94d5-54fc-4f02-a958-8f564d5d5a7c",
+    "team_id": "b69d2bb9-ded6-4738-8395-b10db89dbe31",
+    "user_id": "f1579f29-01ad-4274-8c60-aee4dca27b86",
     "created_at": "2020-01-01T00:00:00Z",
     "updated_at": "2020-01-01T00:00:00Z"
   }
 }
 ```
-</CodeGroup>
+</ResponseExample>
